--- a/public/global.css
+++ b/public/global.css
@@ -2,12 +2,44 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	padding: 0px;
+	margin: 0px;
+}
+.close-btn{
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	cursor: pointer;
+	width: 18px;
 }
 
+.user-avatar{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: aquamarine;
+    margin-left: 5px;
+    margin-top: 7px;
+    cursor: pointer;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+  }
+
+.review-btn{
+	margin: 20px auto;
+	padding: 6px 10px;
+	width: 120px;
+	border-radius: 6px;
+	background: #800000;
+	color: white;
+	box-shadow: 1px 2px 3px rgba(0,0,0,0.5);
+	cursor: pointer;
+}
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
+	padding: 0px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -64,3 +96,18 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+
+::-webkit-scrollbar {
+	width: 8px;
+ }
+ ::-webkit-scrollbar-track {
+	background: #f1f1f1;
+ }
+ ::-webkit-scrollbar-thumb {
+	background: #FBE104;
+	height: 50px;
+ }
+ ::-webkit-scrollbar-thumb:hover {
+   background: #800000;
+ }
